--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M21 4H3C1.89543 4 1 4.89543 1 6V18C1 19.1046 1.89543 20 3 20H21C22.1046 20 23 19.1046 23 18V6C23 4.89543 22.1046 4 21 4Z" stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+                <img src="assets/logo-removebg-preview.png" alt="Logo" class="logo-img">
                 <span class="logo-text">SumbangYuk</span>
             </div>
             <!-- Navigasi -->
             <ul class="nav-menu">
                 <li><a href="#Kategori donasi/kategoridonasi.html">Donasi</a></li>
-                <li><a href="#Riwayat Donasi/riwayatdonasi.html">Riwayat</a></li>
+                <li><a href="#">Riwayat</a></li>
                 <li><a href="#AboutUs/aboutus.html">Tentang</a></li>
                 <li><a href="#aktivitas.html">Aktivitas</a></li>
                 <li><a href="#Login.html" class="login-register">Mulai Berbagi</a></li>
@@ -72,10 +70,15 @@
      </div>
 
     <div class="aktivitas-quote">
-    <p><em>"Rangkaian aksi nyata untuk bantu sesama yang membutuhkan"</em></p>
+    <p>
+        <em>
+            "Rangkaian aksi nyata untuk bantu sesama yang<br>
+             membutuhkan"
+        </em>
+    </p>
+    <br>
     <a href="#" class="btn-quote">Lihat semua</a>
 </div>
-
     <!-- Activities Section -->
 <div class="activities-container">
     <!-- Activities Grid -->
@@ -87,8 +90,6 @@
             </div>
             <div class="activity-content">
                 <h3 class="activity-title">Penyaluran ke Komunitas Sahabat Ibu – Tangerang</h3>
-                <p class="activity-description">
-                    Pada Januari 2025, kami menyalurkan pakaian layak pakai dan perlengkapan rumah tangga ke Komunitas Sahabat Ibu. Bantuan ini diberikan untuk mendukung para ibu yang membutuhkan di wilayah Tangerang.
             </div>
         </div>
 
@@ -119,8 +120,6 @@
         </div>
         <div class="activity-content">
             <h3 class="activity-title">Donasi Seragam Sekolah - SMPN 6 Bekasi</h3>
-            <p class="activity-description">
-                    Pada Januari 2025, kami menyalurkan pakaian layak pakai dan perlengkapan rumah tangga ke Komunitas Sahabat Ibu. Bantuan ini diberikan untuk mendukung para ibu yang membutuhkan di wilayah Tangerang.
         </div>
     </div>
 
@@ -144,7 +143,6 @@
     </div>
     </div>
 </div>
-
 
     <!-- Kata Motivasi -->
 <div class="footer-quote">
@@ -205,18 +203,23 @@ document.querySelectorAll('.nav-menu li a').forEach(function(link) {
         } else if (text === 'riwayat') {
             e.preventDefault();
             window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
-        } else if (text === 'mulai berbagi') {
-            e.preventDefault();
-            window.location.href = 'login.html';
         } else if (text === 'aktivitas') {
             e.preventDefault();
-            window.location.href = 'aktivitas.html';
+            window.location.href = 'Aktivitas.html';
         } else if (text === 'donasi') {
             e.preventDefault();
             window.location.href = 'KategoriDonasi.html';
         }
     });
 });
+
+// Action klik logo ke index.html
+const logo = document.querySelector('.logo');
+if (logo) {
+    logo.addEventListener('click', function() {
+        window.location.href = 'index.html';
+    });
+}
 
 // Tombol "Tentang Kami" di About Us Section
 const btnAbout = document.querySelector('.about-text .btn-about');
@@ -236,16 +239,16 @@ document.querySelectorAll('.footer-column ul li a').forEach(function(link) {
             window.location.href = 'index.html';
         } else if (text === 'donasikan barang' || text === 'donasi') {
             e.preventDefault();
-            window.location.href = 'KategoriDonasi.html';
+            window.location.href = 'login.html';
         } else if (text === 'riwayat donasi') {
             e.preventDefault();
-            window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
+            window.location.href = 'AboutUs/aboutus.html';
         } else if (text === 'tentang kami') {
             e.preventDefault();
-            window.location.href = 'AboutUs/aboutus.html';
+            window.location.href = 'Tentang.html';
         } else if (text === 'aktivitas terbaru') {
             e.preventDefault();
-            window.location.href = 'aktivitas.html';
+            window.location.href = 'Aktivitas..html';
         }
     });
 });
@@ -255,7 +258,7 @@ const btnQuote = document.querySelector('.btn-quote');
 if (btnQuote) {
     btnQuote.addEventListener('click', function(e) {
         e.preventDefault();
-        window.location.href = 'aktivitas.html';
+        window.location.href = 'Aktivitas.html';
     });
 }
 
@@ -276,8 +279,6 @@ if (btnRiwayat) {
         window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
     });
 }
-
-
     
   window.addEventListener('scroll', () => {
     const header = document.querySelector('header');
