--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@ document.querySelectorAll('.nav-menu li a').forEach(function(link) {
         } else if (text === 'donasi') {
             e.preventDefault();
             window.location.href = 'KategoriDonasi.html';
+        
+        } else if (text === 'mulai berbagi') {
+            e.preventDefault();
+            window.location.href = 'login.html';
         }
     });
 });
